# Party-Up

./: .gitignore  README.md  package-lock.json  pyproject.toml
Front-End/: package-lock.json  package.json
Front-End/public/: index.html
Front-End/src/: App.js  app.js  index.css  index.js
Front-End/src/assets/: general.css
Front-End/src/auth/: auth0-provider-with-history.js  protected-route.js
Front-End/src/components/: Header.js  LoginButton.js  LogoutButton.js  SignUp.js  about.js  auth-button.js  background.js  footer.js  header.js  home-content.js  login-button.js  logout-button.js  sign-up.js
Front-End/src/components/Chat/: channel.css  channel.js  channelbar.css  channelbar.js  chat.css  chat.js  chatbox.css  chatbox.js  chatlogin.css  chatlogin.js  firebase.js  message.css  message.js
Front-End/src/components/Feed/: Feed.js
Front-End/src/components/Landing/: Landing.js  LandingForm.js  landing-page.js  sign-up-button.js
Front-End/src/components/Profile/: Profile.js  feed.js  (+5 more)
Front-End/src/features/: appSlice.js  userSlice.js
Front-End/src/views/: external-api.js
back_end/: Dockerfile  db.sqlite3  docker-compose.yml  manage.py  package-lock.json  requirements.txt
back_end/party_up_admin/: asgi.py  settings.py  urls.py  wsgi.py
back_end/party_up_api/: admin.py  apps.py  models.py  permissions.py  serializer.py  urls.py  views.py
back_end/party_up_api/migrations/: 0001_initial.py  0002_profile_dob.py  0002_profile_logged_in_profile_posts_and_more.py  0003_alter_profile_dob.py  0004_alter_profile_dob.py  0005_remove_profile_dob.py
